--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -47,7 +47,9 @@ main section {
     margin-top: 6rem;
 }
 
-main h1, p, button {
+main h1,
+main p,
+main button {
     color: #fff;
     margin: 2rem 0;
 }
@@ -56,17 +58,107 @@ main p {
     font-weight: 300;
 }
 
-main button {
-    border: 1px solid #f4f4f4;
-    border-radius: 2px;
-    font-size: 1.5rem;
-
-    background: none;
-    padding: 0.7rem 1.4rem;
-
-    font-weight: 400;
-}
 
 main h1 {
     font-size: 4rem;
+}
+
+#page-contact{
+    width: 100vw;
+    padding: 6rem 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#page-contact section{
+    width: 40vw;
+    min-height: 48rem;
+    border-radius: 4px;
+
+
+    background: #f5f5f5;
+}
+
+#contact-flyer {
+    padding: 5rem 3.1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+
+#location-advise h2{
+    margin-bottom: 2.7rem;
+}
+
+#price-advise{
+    border: 1px solid #242424;
+    border-radius: 5px;
+    margin: 0 5rem;
+    padding: 3rem;
+}
+
+#price-advise h3{
+    line-height: 4rem;
+}
+
+#contact-form {
+    padding: 5rem 3.1rem;
+}
+
+.form-items {
+    border: 0;
+}
+
+.form-items label:not(.checkbox-label) {
+    display: block;
+    font-size: 1.6rem;
+    font-family: 'Nunito', sans-serif;
+}
+
+.form-items .inline-form-items {
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     align-items: stretch;
+}
+
+.form-items .inline-form-items div {
+
+}
+
+.form-items input,
+.form-items textarea{
+    width: 100%;
+    padding: 0.5rem 1rem;
+    margin-bottom: 2rem;
+
+    font-weight: 400;
+    font-size: 1.4rem;
+
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 2px;
+
+    background: #fff;
+    color: rgba(0,0,0,0.6);
+
+}
+
+.contact-checkbox {
+    font-size: 1.3rem;
+}
+
+.contact-checkbox input {
+    width: 1.3rem;
+    height: 1.3rem;
+    cursor: pointer;
+}
+
+.form-items button {
+    border-color: #242424;
+    cursor: pointer;
 }
