--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -73,11 +73,11 @@ main h1 {
 }
 
 #page-contact section{
-    width: 40vw;
-    min-height: 48rem;
+    width: auto;
+    height: 55rem;
     border-radius: 4px;
 
-
+    flex-basis: 40%;
     background: #f5f5f5;
 }
 
@@ -108,57 +108,4 @@ main h1 {
 
 #contact-form {
     padding: 5rem 3.1rem;
-}
-
-.form-items {
-    border: 0;
-}
-
-.form-items label:not(.checkbox-label) {
-    display: block;
-    font-size: 1.6rem;
-    font-family: 'Nunito', sans-serif;
-}
-
-.form-items .inline-form-items {
-     display: flex;
-     flex-direction: row;
-     justify-content: space-between;
-     align-items: stretch;
-}
-
-.form-items .inline-form-items div {
-
-}
-
-.form-items input,
-.form-items textarea{
-    width: 100%;
-    padding: 0.5rem 1rem;
-    margin-bottom: 2rem;
-
-    font-weight: 400;
-    font-size: 1.4rem;
-
-    border: 1px solid rgba(0,0,0,0.2);
-    border-radius: 2px;
-
-    background: #fff;
-    color: rgba(0,0,0,0.6);
-
-}
-
-.contact-checkbox {
-    font-size: 1.3rem;
-}
-
-.contact-checkbox input {
-    width: 1.3rem;
-    height: 1.3rem;
-    cursor: pointer;
-}
-
-.form-items button {
-    border-color: #242424;
-    cursor: pointer;
 }
