--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
 body {
     background: #fff;
     height: 100vh;
+    width: 99vw;
 }
 
 body,
@@ -55,4 +56,68 @@ button {
     border: 1px solid #f4f4f4;
 
     font-family: 'Nunito', sans-serif;
+}
+
+fieldset {
+    border: 0;
+}
+
+fieldset label:not(.checkbox-label) {
+    display: block;
+    font-size: 1.6rem;
+    font-family: 'Nunito', sans-serif;
+}
+
+fieldset input,
+fieldset textarea{
+    width: 100%;
+    padding: 0.5rem 1rem;
+    margin-bottom: 2rem;
+
+    font-weight: 400;
+    font-size: 1.4rem;
+
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 2px;
+
+    background: #fff;
+    color: rgba(0,0,0,0.6);
+
+}
+
+fieldset button {
+    border-color: #242424;
+    cursor: pointer;
+}
+
+.inline-form-items {
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
+     align-items: stretch;
+}
+
+.inline-form-items div {
+    flex-basis: 45%;
+}
+
+.contact-checkbox {
+    font-size: 1.3rem;
+    display: flex;
+}
+
+.contact-checkbox input {
+    margin-right: 1rem;
+    width: 1.3rem;
+    height: 1.3rem;
+    cursor: pointer;
+}
+
+.form-message {
+    display: none;
+    opacity: 0;
+}
+
+.form-message:first-child{
+    line-height: 4rem;
 }
