--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,19 @@ textarea{
     line-height: 2rem;
 }
 
+a{
+    text-decoration: none;
+    color: #000;
+}
+
+a:hover {
+    color: rgba(0,0,0,0.7);
+}
+
+.inverted {
+    filter: invert(100%);
+}
+
 .nunito {
     font-family: 'Nunito', sans-serif;
     font-weight: 700;
