--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -62,11 +62,10 @@ main p {
 
 main h1 {
     font-size: 4rem;
+    line-height: 4.2rem;
 }
 
 #page-contact{
-    width: 100vw;
-    padding: 6rem 0;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -109,4 +108,33 @@ main h1 {
 
 #contact-form {
     padding: 5rem 3.1rem;
+}
+
+#page-about {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-around;
+    min-height: calc(100vh + 12rem);
+    text-align: center;
+}
+
+.about-flyers {
+    display : flex;
+    align-items: center;
+}
+
+.about-flyers div {
+    width: 26vw;
+    min-height: 20rem;
+    margin: 2rem;
+    padding: 3rem;
+
+    background-color: #f5f5f5;
+
+    border-radius: 5px;
+}
+
+.about-flyers h3 {
+    line-height: 5rem;
 }
