--- a/css/animations.css
+++ b/css/animations.css
@@ -6,3 +6,12 @@
         opacity: 1;
     }
 }
+
+@keyframes inverseColor {
+    from {
+        filter: invert(0%);
+    }
+    to {
+        filter: invert(100%);
+    }
+}
