--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -201,7 +201,7 @@ main h1 {
 }
 
 /*== Media ==*/
-@media screen and (max-width: 768px){
+@media screen and (max-device-width: 980px){
     
     main {
         max-width: 100vw;
@@ -244,7 +244,7 @@ main h1 {
     }
 }
 
-@media screen and (max-width: 465px){
+@media screen and (max-device-width: 768px){
     .about-flyers {
         padding: 5rem 0;
     }
