--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -245,6 +245,11 @@ main h1 {
 }
 
 @media screen and (max-device-width: 768px){
+	
+	main::after{
+	content: 'mobile-landing-page < 768px';
+	}
+
     .about-flyers {
         padding: 5rem 0;
     }
