--- a/css/animations.css
+++ b/css/animations.css
@@ -26,3 +26,16 @@
         transform: translate(0, 6rem);
     }
 }
+
+@keyframes opacity {
+    0%, 100% {
+        opacity: 0;
+        transform: scale(1);
+        filter: brightness(1);
+    }
+    30%, 70% {
+        opacity: 1;
+        transform: scale(1.01);
+        filter: brightness(150%);
+    }
+}
