--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -29,18 +29,19 @@ main section {
 main h1,
 main p,
 main button {
-    color: var(--thr-color);
+    color: #fff;
     margin: 2rem 0;
 }
 
 main p {
     font-weight: 300;
+    line-height: 1.5;
 }
 
 
 main h1 {
     font-size: 4rem;
-    line-height: 4.2rem;
+    line-height: 2;
 }
 
 /*== About Styles ==*/
@@ -55,7 +56,7 @@ main h1 {
 }
 
 #page-about p {
-    color: var(--sec-color);
+    color: #6a6a6a;
 }
 
 .about-flyers {
@@ -77,12 +78,12 @@ main h1 {
     align-items: center;
     justify-content: center;
 
-    background-color: var(--bg-gray-s);
+    background-color: #f5f5f5;
     border-radius: 5px;
 }
 
 .about-flyers h3 {
-    line-height: 5rem;
+    line-height: 4;
 }
 
 /*== Services Section==*/
@@ -94,13 +95,13 @@ main h1 {
     min-height: calc(100vh);
     text-align: center;
     
-    background: var(--bg-gray);
+    background-color: #242424;
     
     
 }
 
 #page-service .section-message {
-    color: var(--thr-color);
+    color: #fff;
     margin-bottom: 6rem;
 }
 
@@ -150,7 +151,7 @@ main h1 {
 }
 
 .service-remove {
-    pointer-events: all;
+    pointer-events: auto;
     
     float: right;
     width: 4rem;
@@ -238,11 +239,11 @@ main h1 {
     pointer-events: none;
     
     transition: .2s;
-    border: 1px solid var(--first-color);
+    border: 1px solid #242424;
 }
 
 #contact-service-select:hover {
-    border: 2px solid var(--first-color);
+    border: 2px solid #242424;
 }
 
 #pop-selected-services {
@@ -259,7 +260,7 @@ main h1 {
     border-radius: 6px;
     
     box-shadow: 0 0 18px 18px rgba(0,0,0, .2);
-    background: var(--bg-white);
+    background: #fff;
     
     transition: .2s;
 }
@@ -272,7 +273,7 @@ main h1 {
 }
 
 #pop-selected-services[class~="display"] button {
-    pointer-events: all;
+    pointer-events: auto;
 }
 
 #pop-selected-services div {
@@ -291,7 +292,7 @@ main h1 {
     width: 3rem;
     height: 3rem;
     
-    color: var(--thr-color);
+    color: #fff;
     background: orange;
     border-radius: 50%;
     
@@ -303,12 +304,12 @@ main h1 {
 
 
 #contact-service-select-text {
-    color: var(--sec-color);
+    color: #6a6a6a;
     animation: opacity 3s infinite alternate;
 }
 
 #service-flyer div p {
-    color: var(--sec-color);
+    color: #6a6a6a;
 }
 
 #service-flyer div p[class~="icon"] {
@@ -335,7 +336,7 @@ main h1 {
     border-radius: 4px;
 
     flex-basis: 40%;
-    background: var(--bg-gray-s);
+    background: #f5f5f5;
 }
 
 #contact-flyer {
@@ -353,14 +354,10 @@ main h1 {
 }
 
 #price-advise{
-    border: 1px solid var(--first-color);
+    border: 1px solid #242424;
     border-radius: 5px;
     margin: 0 5rem;
     padding: 3rem;
-}
-
-#price-advise h3{
-    line-height: 4rem;
 }
 
 #contact-form {
@@ -374,7 +371,7 @@ main h1 {
 }
 
 .section-message p {
-    line-height: 2rem;
+    line-height: 1.5;
     padding: 0 20vw;
 }
 
@@ -385,12 +382,11 @@ main h1 {
         max-width: 100vw;
     }
     main section{
-        text-align: justify;
+        text-align: center;
     }
     main h1 {
         font-size: 4.2rem;
-        line-height: 6rem;
-	text-align: center;
+        line-height: 1.5;
     }
     
     
@@ -414,14 +410,14 @@ main h1 {
     }
     
     .section-message h2 {
-    margin-bottom: 5rem;
+        margin-bottom: 5rem;
     }
 
     .section-message p {
-        line-height: 2rem;
+        line-height: 1.5;
         margin: 0 10vw;
-	padding: 0;
-	text-align:  justify;
+        padding: 0;
+        text-align:  justify;
     }
 }
 
@@ -444,6 +440,10 @@ main h1 {
     #contact-service-select-text{
         margin-top: 7rem;
         font-size: 2rem;
+    }
+    
+    #contact-service-select-text{
+       font-size: 1.7rem; 
     }
     
     #pop-selected-services {
