--- a/css/main.css
+++ b/css/main.css
@@ -8,14 +8,11 @@
 }
 
 :root{
-    --bg-white: #fff;
-    --bg-gray: #242424;
     --bg-gray-s: #f5f5f5;
 
     --first-color: #242424;
     --sec-color: #6a6a6a;
     --thr-color: #fff;
-    --nav-hover-color: orange;
 
     font-size: 0.7326vw;
 }
@@ -34,7 +31,7 @@ input,
 button,
 textarea{
     font: 400 1.7rem/1 'Montserrat Alternates', sans-serif;
-    color: var(--first-color);
+    color: #242424;
     line-height: 2rem;
 }
 
@@ -42,7 +39,7 @@ header{
     width: 100vw;
     height: 6rem;
 
-    background: var(--bg-white);
+    background: #fff;
 
     display: flex;
     align-items: center;
@@ -70,12 +67,12 @@ nav ul a, li {
 
 nav a:hover,
 nav a[class~="active"]{
-    color: var(--nav-hover-color);
+    color:orange;
 }
 
 
 a{
-    color: var(--first-color);
+    color: #242424;
     text-decoration: none;
 }
 
@@ -100,6 +97,7 @@ fieldset label:not(.checkbox-label) {
     display: block;
     font-size: 1.6rem;
     font-family: 'Nunito', sans-serif;
+    transform: translateY(-.5rem);
 }
 
 fieldset input,
@@ -112,16 +110,101 @@ fieldset textarea{
     font-size: 1.4rem;
 
     border: 1px solid rgba(0,0,0,0.2);
-    border-radius: 2px;
+    border-radius: 5px;
+    padding: 3px;
 
-    background: var(--bg-white);
+    background: #fff;
     color: rgba(0,0,0,0.6);
+}
 
+input:focus,
+textarea:focus{
+    box-shadow: inset 0 0 1px 1px rgba(0,0,0,0.1);
+}
+
+input[type='checkbox']{
+    display: none;
+}
+
+input[type='checkbox'] + label {
+    cursor: pointer;
+}
+
+input[type='checkbox'] + label::before {
+    content: '\2714';
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 3px;
+    
+    display: inline-block;
+    
+    padding: .2rem;
+    line-height: 1;
+    font-size: 1.4rem;
+    
+    width: fit-content;
+    height: fit-content;
+    margin-right: .8rem;
+    
+    vertical-align: bottom;
+    color: transparent;
+    transition: .2s;
+}
+
+input[type='checkbox']:active + label::before {
+    transform: scale(0);
+}
+
+input[type='checkbox']:checked + label::before {
+    color: #242424;
+    background: #fff;
+}
+
+label span {
+    font-family: 'Montserrat Alternates', sans-serif;
+    font-weight: 200;
+    color: red;
+}
+
+input ~ span, textarea ~ span {
+    font-size: 1.15rem;
+    transform: translateY(-2rem);
+    display: block;
+    color: rgba(255,0,0,0.55);
+    opacity: 0;
+    transition: .2s;
+    
+    z-index: -1;
+}
+
+input:focus:invalid ~ span,
+textarea:focus:invalid ~span {
+    transform: translateY(-1.55rem);
+    opacity: 1;
+    z-index: 0;
+    
+}
+
+ {
+    transform: translateY(-1.55rem);
+    opacity: 1;
+    z-index: 0;
 }
 
 fieldset button {
-    border-color: var(--first-color);
+    border-color: #242424;
     cursor: pointer;
+}
+
+footer {
+    background: #242424;
+    height: 6rem;
+    color: var(--thr-color);
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    padding: 0 8rem;
 }
 
 
@@ -136,7 +219,7 @@ fieldset button {
 }
 
 .page-section {
-    background-color : var(--bg-white);
+    background-color : #fff;
     width: 100vw;
     padding: 6rem 0;
 }
@@ -151,7 +234,7 @@ fieldset button {
     height: 5.2rem;
     margin: 0 auto;
 
-    border: 2px solid var(--first-color);
+    border: 2px solid #242424;
     border-radius: 100%;
 }
 
@@ -199,6 +282,52 @@ fieldset button {
     background-image: url('../img/bxs-menu.svg');
 }
 
+.social-media-icons {
+    display: flex;
+}
+
+.social-media-icons:nth-child(n + 1) p {
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    
+    min-width: 2.6rem;
+    height: 2.6rem;
+    border-radius: 50%;
+    
+    transition: .15s;
+}
+
+.social-media-icons {
+    list-style: none;
+}
+
+.social-media-icons a {
+     transition: .2s;
+}
+
+.social-media-icons li {
+    min-width: 2.6rem;
+    height: 2.6rem;
+    margin-left: 1rem;
+    
+    display: flex;
+    align-items: center;
+    
+}
+
+.social-media-icons a:hover {
+    transform: scale(1.2);
+}
+
+.facebook-icon {
+    background-image: url('../img/facebook.png');
+}
+
+.github-icon {
+    background-image: url('../img/github.png');
+}
+
 
 .inline-form-items {
      display: flex;
@@ -213,14 +342,7 @@ fieldset button {
 
 .contact-checkbox {
     font-size: 1.3rem;
-    display: flex;
-}
-
-.contact-checkbox input {
-    margin-right: 1rem;
-    width: 1.3rem;
-    height: 1.3rem;
-    cursor: pointer;
+    height: 4rem;
 }
 
 .form-message {
@@ -298,12 +420,16 @@ fieldset button {
     header[class~="open"] .menu {
 	transform: rotate(-90deg);
         background-image : url('../img/bxs-x.svg');
-        border: 1px solid var(--first-color);
+        border: 1px solid #242424;
         border-radius: 10%;
     }
     
     header nav {
         text-align: center;
         grid-column: 1 / 3;
+    }
+    
+    footer{
+        padding: 0 2rem;
     }
 }
