--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -263,6 +263,7 @@ main h1 {
     background: #fff;
     
     transition: .2s;
+    z-index: 1000;
 }
 
 #pop-selected-services[class~="display"] {
